# booklet-print-layout-assistant

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml
examples/: README.md
scripts/: build_windows.ps1  create_example_pdf.py  package_release.ps1  run_app.ps1
src/booklet_print_layout_assistant/: __init__.py  __main__.py  cli.py
src/booklet_print_layout_assistant/app/: api.py  paths.py  window.py
src/booklet_print_layout_assistant/core/: __init__.py  manifest.py  page_selection.py  pdf_writer.py  planning.py  thumbnails.py
src/booklet_print_layout_assistant/frontend/: app.js  index.html  styles.css
src/booklet_splitter/: __init__.py  __main__.py  cli.py
src/booklet_splitter/app/: __init__.py  api.py  paths.py  window.py
src/booklet_splitter/core/: __init__.py  manifest.py  models.py  pdf_writer.py  planning.py
src/booklet_splitter/frontend/: app.js  index.html
tests/: test_manifest.py  test_page_selection.py  test_pdf_writer.py  test_planning.py  test_thumbnails.py
