[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booklet-splitter"
version = "0.1.0"
description = "Split reading-order PDFs into booklet-sized parts for printing."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "booklet-splitter contributors" }
]
keywords = ["pdf", "booklet", "printing", "split"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Printing",
  "Topic :: Utilities",
]
dependencies = [
  "pypdf>=4.0",
  "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6",
  "pytest>=8",
]

[project.scripts]
booklet-split = "booklet_splitter.cli:main"

[project.gui-scripts]
booklet-splitter = "booklet_splitter.app.window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
booklet_splitter = ["frontend/*.html", "frontend/*.css", "frontend/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
