[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booklet-print-layout-assistant"
version = "0.2.0"
description = "Prepare booklet print layouts from reading-order PDFs with page selection and booklet splitting."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "booklet-print-layout-assistant contributors" }
]
keywords = ["pdf", "booklet", "printing", "layout", "bookbinding", "imposition"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Printing",
  "Topic :: Utilities",
]
dependencies = [
  "pypdf>=4.0",
  "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6",
  "pytest>=8",
  "reportlab>=4",
]

[project.scripts]
booklet-print = "booklet_print_layout_assistant.cli:main"

[project.gui-scripts]
booklet-print-layout-assistant = "booklet_print_layout_assistant.app.window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
booklet_print_layout_assistant = ["frontend/*.html", "frontend/*.css", "frontend/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
